# c-programming

./: CMakeLists.txt  function_change_arguments_value_by_address.c  main.c  pointer_address_int.c  variables_types_sizes.c
lessons/: array_pointers_in_func.c  array_remove_item_c_impl.c  pointer_on_pionter.c  variables_addresses.c
